applications/qa-robot/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: qa-robot
  name: qa-robot
