applications/qa-robot/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-robot-deployment
  namespace: qa-robot
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: qa-robot
  template:
    metadata:
      labels:
        app: qa-robot
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: qa-robot
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-qa-robot:2a015a432bf31d8a289c7c3dbb87cb4108704f2c
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
